examples/test/testpolicy8630.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8630
  namespace: namespace289
spec:
  podSelector:
    matchLabels:
      key24: value25
      key20: value1
      key29: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value17
          key30: value36
      podSelector:
        matchLabels:
          key7: value14
          key46: value48
          key30: value1
